# shimmer-language

./: .gitignore  CODESPACES_AGENT_ACCESS.md  COMMIT_MESSAGE.md  Cargo.toml  LICENSE  README.md  build.rs  requirements.txt
.devcontainer/: devcontainer.json  setup-multi-agent.sh
benches/: compression_benchmark.rs
docs/: compression-guide.md  gpu-runtime.md
examples/: advanced_learning.shimmer  basic_operations.shimmer  consciousness_modeling.shimmer  mathematical_computing.shimmer  runnable_demo.rs
protos/: gpu_acceleration.proto  shimmer_types.proto
runtime/: consciousness_gpu_kernels.py
specs/: SHIMMER_CANONICAL_DEFINITIONS.shimmer  SHIMMER_CODE_SPEC_v1.3.shimmer  SHIMMER_OPERATOR_REFERENCE.shimmer
src/: ast.rs  compiler.rs  compression.rs  compression_benchmark.rs  consciousness.rs  gpu.rs  lib.rs  parser.rs  repl.rs  runtime.rs  shimmer_mini_compiler.rs
